add basic error checking and input field

--- a/src/template.html
+++ b/src/template.html
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div id="content">
+      <form action="" id="get-weather">
+        <div>
+          <label for="city">City:</label>
+          <input type="text" id="city" placeholder="...London" required />
+        </div>
+        <button type="submit" id="submit">Search</button>
+      </form>
+    </div>
+  </body>
 </html>
