add styling to active unit and general styling

--- a/src/template.html
+++ b/src/template.html
@@ -14,6 +14,8 @@
       <button type="submit" id="submit">Search</button>
     </form>
     <div id="content">
+      <h1 style="display: none;" id="load">Loading....</h1>
+      <h2 id="cityName"></h2>
       <div id="selectedWeather"></div>
       <div id="weatherForecast"></div>
     </div>
